--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "gatsby": "^1.9.247",
     "gatsby-link": "^1.6.40",
+    "gatsby-plugin-netlify-cms": "^3.0.4",
     "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-remark-prismjs": "^2.0.5",
     "gatsby-source-filesystem": "^1.5.36",
     "gatsby-transformer-remark": "^1.7.44",
     "gh-pages": "^1.1.0",
+    "netlify-cms": "^2.1.3",
     "prismjs": "^1.15.0",
     "react-helmet": "^5.2.0"
   },
